--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
         body {
             background-color: #f8f9fa;
             font-family: 'Times New Roman', Times, serif;
-            background-image: url(static/media/login-bg.jpg);
+            background-image: url(static/media/bg.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
