--- a/templates/registration.html
+++ b/templates/registration.html
@@ -13,12 +13,12 @@
         }
         body {
             font-family: 'Times New Roman', Times, serif;
-            background-image: url("{{ url_for('static', filename='media/login-bg.jpg') }}");
+            background-image: url("{{ url_for('static', filename='media/bg.jpg') }}");
             background-size: cover;
         }
     </style>
 </head>
-<body class="bg-light" >
+<body class="bg-light">
 
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="card shadow p-4" style="max-width: 500px; width: 100%;">
